force-app/main/default/objects/Lane__c/Lane__c.object-meta.xml
<CustomObject>
    <label>Swim Lane</label>
    <nameField>
        <label>Lane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swim Lanes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>