force-app/main/default/objects/Lane__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Swim Lanes</relationshipLabel>
    <relationshipName>Swim_Lanes</relationshipName>
    <type>Lookup</type>
</CustomField>