force-app/main/default/objects/Lane__c/fields/Current_Board_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Board_ID__c</fullName>
    <label>Current Board ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>