force-app/main/default/objects/Lane__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Making Public will allow guest users to access this Swim Lane. Use the Make Public quick action to make this public. The quick action will automatically reset after a given number of hours.</description>
    <inlineHelpText>Making Public will allow guest users to access this Swim Lane. Use the Make Public quick action to make this public. The quick action will automatically reset after a given number of hours.</inlineHelpText>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>