force-app/main/default/objects/Lane__c/fields/Total_Time_to_Complete_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_to_Complete_in_minutes__c</fullName>
    <label>Total Time to Complete (in minutes)</label>
    <summarizedField>Board__c.Time_to_Complete_in_minutes__c</summarizedField>
    <summaryForeignKey>Board__c.Lane__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>