force-app/main/default/objects/Lane__c/listViews/My_Swim_Lanes.listView-meta.xml
<ListView>
    <fullName>My_Swim_Lanes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Swim Lanes</label>
</ListView>