force-app/main/default/objects/Lane__c/listViews/Shared_Externally.listView-meta.xml
<ListView>
    <fullName>Shared_Externally</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Public__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Shared Externally</label>
</ListView>