force-app/main/default/objects/Lane__c/listViews/Templates.listView-meta.xml
<ListView>
    <fullName>Templates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Templates</label>
</ListView>